# secure-ai-agent-matching-platform

./: .dockerignore  .env  .env_sample  .gitignore  CLAUDE.md  CODEX_REVIEW.md  Dockerfile  LICENSE  README.md  SECURITY_IMPLEMENTATION.md  SPECIFICATION.md  docker-compose.yml  execution_log.json  pyproject.toml  run_cli.sh  run_web.sh  test_security.py
demo/: DEMO_GUIDE.md  README.md  demo.sh  okinawa_trip_demo.py  quick_test.sh  run_cli.sh  run_web.sh  simple_demo.py  start_agents.sh  stop_all.sh  test_subagent.py
deploy/: Dockerfile  Dockerfile.cloudrun  deploy-cloudrun.sh  export-sample-data.sh  nginx.conf  patch_adk_agent_card_path.py  run-local.sh  start-nginx.sh  start.sh  stop-local.sh  supervisord.conf
docs/: A2A_Protocol_Latest_2026.pptx  ADOPTION_STRATEGY.md  AGENT_HARNESS_ANALYSIS.md  ARCHITECTURE.md  DEMO.md  DEMO_GUIDE.md  DESIGN_streaming_A2A.md  FUTURE_AGENTCARD_CA_SIGNING.md  GENIAC_PRIZE_FINAL_PREP.md  GENIAC_PRIZE_QA_final.md  LOCAL_DEVELOPMENT.md  NEDO_QA_adoption_strategy.md  NEDO_QA_evaluation_validity.md  NEDO_QA_novelty.md  NEDO_QA_planner_algorithm.md  NOVELTY.md  NOVELTY_PUBLICATION.md  SECURITY_IMPLEMENTATION.md  SETUP.md  WANDB_WEAVE_GUIDE.md  demo_script_3min.md  evaluation_pipeline.pptx  round-to-turn-migration.md  trusted_agent_store_design.md  zenn-article-draft.md
external-agents/: START_AGENTS.md
plans/: okinawa-travel-booking-20241220_20251109_013925.md  okinawa-trip-1220_20251109_011226.md  okinawa-trip-1220_20251109_015816.md  okinawa-trip-20231220_20251109_003917.md  (+15 more)
trusted_agent_hub/sandbox-runner/: Dockerfile  README.md  pyproject.toml
trusted_agent_hub/sandbox-runner/resources/ragtruth/: sample.jsonl
trusted_agent_hub/sandbox-runner/src/sandbox_runner/: capability_validation.py  cli.py  functional_accuracy.py  judge_orchestrator.py  judge_panel.py  log_wandb_event.py  mcts_orchestrator.py  security_gate.py  wandb_mcp.py
trusted_agent_store/evaluation-runner/: pyproject.toml
trusted_agent_store/evaluation-runner/resources/ragtruth/: agent-card-accuracy-expected-answers.jsonl
trusted_agent_store/evaluation-runner/src/evaluation_runner/: agent_card_accuracy.py  artifact_storage.py  jury_judge.py  mcts_orchestrator.py  payload_compressor.py  security_gate.py  wandb_logger.py
trusted_agent_store/evaluation-runner/tests/: test_cli.py  test_payload_compressor.py
(+226 files in other folders)
